chore: use Java 21 SequencedCollection (i.e. getFirst() instead of get(0)) (#541)