@@ -65,7 +65,7 @@ public class KafkaConnectArtefactManager extends ArtefactManager {
     List<IOException> errors =
         list.stream().filter(Either::isLeft).map(e -> (IOException) e.getLeft().get()).toList();
     if (!errors.isEmpty()) {
-      throw new IOException(errors.get(0));
+      throw new IOException(errors.getFirst());
     }
 
     return list.stream()
