@@ -455,7 +455,7 @@ public class AccessControlManagerTest {
     // Check that the action bindings are for the managed prefix topic, not the non-managed prefix.
     assertEquals(
         2,
-        getAccessControlActions(plan).get(0).getAclBindings().stream()
+        getAccessControlActions(plan).getFirst().getAclBindings().stream()
             .filter(
                 b ->
                     b.getResourceType().equals(ResourceType.TOPIC.name())
@@ -463,7 +463,7 @@ public class AccessControlManagerTest {
             .count());
     assertEquals(
         0,
-        getAccessControlActions(plan).get(0).getAclBindings().stream()
+        getAccessControlActions(plan).getFirst().getAclBindings().stream()
             .filter(
                 b ->
                     b.getResourceType().equals(ResourceType.TOPIC.name())
@@ -492,7 +492,7 @@ public class AccessControlManagerTest {
     // Check that the action bindings are for the managed prefix group, not the non-managed prefix.
     assertEquals(
         1,
-        getAccessControlActions(plan).get(0).getAclBindings().stream()
+        getAccessControlActions(plan).getFirst().getAclBindings().stream()
             .filter(
                 b ->
                     b.getResourceType().equals(ResourceType.GROUP.name())
@@ -500,7 +500,7 @@ public class AccessControlManagerTest {
             .count());
     assertEquals(
         0,
-        getAccessControlActions(plan).get(0).getAclBindings().stream()
+        getAccessControlActions(plan).getFirst().getAclBindings().stream()
             .filter(
                 b ->
                     b.getResourceType().equals(ResourceType.GROUP.name())
@@ -508,7 +508,7 @@ public class AccessControlManagerTest {
             .count());
     assertEquals(
         1,
-        getAccessControlActions(plan).get(0).getAclBindings().stream()
+        getAccessControlActions(plan).getFirst().getAclBindings().stream()
             .filter(
                 b ->
                     b.getResourceType().equals(ResourceType.GROUP.name())
@@ -536,7 +536,7 @@ public class AccessControlManagerTest {
     // Check that the action bindings are for the managed service group, not the non-managed prefix.
     assertEquals(
         1,
-        getAccessControlActions(plan).get(0).getAclBindings().stream()
+        getAccessControlActions(plan).getFirst().getAclBindings().stream()
             .filter(
                 b ->
                     b.getResourceType().equals(ResourceType.GROUP.name())
@@ -545,7 +545,7 @@ public class AccessControlManagerTest {
             .count());
     assertEquals(
         0,
-        getAccessControlActions(plan).get(0).getAclBindings().stream()
+        getAccessControlActions(plan).getFirst().getAclBindings().stream()
             .filter(
                 b ->
                     b.getResourceType().equals(ResourceType.GROUP.name())
